[gd_scene load_steps=15 format=2]

[ext_resource path="res://script/dew_intro.gd" type="Script" id=1]
[ext_resource path="res://media/dew_intro_menu.png" type="Texture" id=2]
[ext_resource path="res://media/Font/Code Vein Fonts/DroidSansFallback.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://media/Font/Code Vein Fonts/DroidSansMono.ttf" type="DynamicFontData" id=4]

[sub_resource type="DynamicFont" id=1]
outline_size = 1
outline_color = Color( 0.27451, 0.65098, 0.0627451, 1 )
font_data = ExtResource( 3 )

[sub_resource type="Animation" id=2]
resource_name = "dew_logo"
length = 3.6
tracks/0/type = "value"
tracks/0/path = NodePath("dew_intro_menu:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 3.6 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0.1, 0.1 ), Vector2( 1, 1 ) ]
}

[sub_resource type="Animation" id=3]
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Button:custom_fonts/font:size")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 16, 45, 17 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Button:custom_fonts/font:outline_color")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 0.27451, 0.65098, 0.0627451, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Button:custom_fonts/font:outline_size")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 1 ]
}

[sub_resource type="Animation" id=4]
resource_name = "dew_logo"
length = 3.6
tracks/0/type = "value"
tracks/0/path = NodePath("dew_intro_menu:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 3.6 ),
"transitions": PoolRealArray( 3.8, 4.75683 ),
"update": 0,
"values": [ Vector2( 0.1, 0.1 ), Vector2( 1, 1 ) ]
}

[sub_resource type="Animation" id=5]
resource_name = "dew_logo_flash"
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("dew_intro_menu:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 0.9 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 0.392157, 0.388235, 0.388235, 1 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=6]
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Button:custom_fonts/font:size")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 16, 45, 17 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Button:custom_fonts/font:outline_color")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 0.27451, 0.65098, 0.0627451, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Button:custom_fonts/font:outline_size")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 1 ]
}

[sub_resource type="Animation" id=7]
resource_name = "dew_logo"
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath("dew_intro_menu:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0.1, 0.1 ), Vector2( 1, 1 ) ]
}

[sub_resource type="Animation" id=8]
resource_name = "flash_white"
length = 4.5
tracks/0/type = "value"
tracks/0/path = NodePath("ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 3.6, 3.7, 4.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=9]
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Button:custom_fonts/font:size")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 16, 45, 17 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Button:custom_fonts/font:outline_color")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 0.27451, 0.65098, 0.0627451, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Button:custom_fonts/font:outline_size")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 1 ]
}

[sub_resource type="DynamicFont" id=10]
size = 40
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 4 )

[node name="dew_intro" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="dew_intro_menu" type="Sprite" parent="."]
position = Vector2( 672, 384 )
scale = Vector2( 0.550147, 0.550147 )
texture = ExtResource( 2 )

[node name="Button" type="Button" parent="."]
visible = false
anchor_right = 1.0
margin_left = 464.0
margin_top = 641.0
margin_right = -486.0
margin_bottom = 669.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.972549, 0.921569, 0.690196, 1 )
text = "PRESS SPACE!"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/dew_logo = SubResource( 2 )
anims/text_big_small = SubResource( 3 )

[node name="AnimationPlayer2" type="AnimationPlayer" parent="."]
anims/dew_logo = SubResource( 4 )
anims/dew_logo_flash = SubResource( 5 )
anims/text_big_small = SubResource( 6 )

[node name="AnimationPlayer3" type="AnimationPlayer" parent="."]
anims/dew_logo = SubResource( 7 )
anims/flash_white = SubResource( 8 )
anims/text_big_small = SubResource( 9 )

[node name="esc" type="Label" parent="."]
visible = false
margin_top = 16.0
margin_right = 128.0
margin_bottom = 64.0
custom_fonts/font = SubResource( 10 )
text = "ESC"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Timer" type="Timer" parent="."]
wait_time = 3.7
one_shot = true
autostart = true

[node name="free_colorRect" type="Timer" parent="."]
wait_time = 0.5

[node name="VSlider" type="VSlider" parent="."]
visible = false
margin_left = 1072.0
margin_top = 48.0
margin_right = 1360.0
margin_bottom = 704.0
min_value = -60.0
max_value = 20.0
step = 2.0
value = -10.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="VSlider"]
margin_left = 80.0
margin_top = 656.0
margin_right = 128.0
margin_bottom = 670.0
rect_scale = Vector2( 3.12076, 3.74766 )
text = "volume"

[node name="beat" type="Label" parent="VSlider"]
margin_left = -1058.0
margin_top = 691.0
margin_right = -989.0
margin_bottom = 705.0
rect_scale = Vector2( 1.36563, 1.36563 )
text = "By beatmil"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 1376.0
margin_bottom = 768.0
color = Color( 1, 1, 1, 2.38418e-06 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="free_colorRect" to="." method="_on_free_colorRect_timeout"]
